Add debug config when running `web-tests` with gretty.